# gpr200-fa2023

./: CMakeLists.txt
assignments/assignment1_helloTriangle/: main.cpp
assignments/assignment2_sunset/: main.cpp
assignments/assignment2_sunset/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment3_textures/: main.cpp
assignments/assignment3_textures/assets/: character.frag  character.vert  fragmentShader.frag  vertexShader.vert
assignments/assignment4_transformations/: main.cpp
assignments/assignment4_transformations/assets/: vertexShader.vert
assignments/assignment5_camera/: main.cpp
assignments/assignment6_proceduralGeometry/: main.cpp
assignments/assignment7_lighting/: main.cpp
assignments/assignment7_lighting/assets/: defaultLit.frag
assignments/final_project/: CMakeLists.txt  main.cpp
assignments/final_project/assets/: blur.frag  blur.vert  defaultLit.frag  defaultLit.vert  screen.frag  skybox.frag  skybox.vert  unlit.frag  unlit.vert
assignments/final_project/assets/cars/: gtr-exported.mtl  lexus-exported.mtl
assignments/final_project/assets/cars/gtr/: gtr-exported.mtl
assignments/final_project/assets/test/: untitled.mtl
core/ew/: cameraController.cpp  mesh.cpp  mesh.h
core/vg3o/: camera.h  cutscene.h  framebuffer.cpp  framebuffer.h  model.cpp  model.h  procGen.cpp  procGen.h  shader.cpp  shader.h  skybox.cpp  skybox.h  texture.cpp  texture.h  transformations.h  tween.h
